--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material-nextjs": "^5.15.11",
     "ai": "^3.0.16",
     "aws-amplify": "^6.0.24",
+    "dotenv": "^16.4.5",
     "nex": "^2.0.22",
     "next": "14.1.4",
     "node-fetch": "^2.7.0",
